# light-store

./: README.md  docker-compose.yml
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  fixtures.ts  index.css  main.tsx  store.ts  types.ts
frontend/src/components/BasketButton/: BasketButton.tsx
frontend/src/components/BasketItem/: BasketItem.module.css  BasketItem.tsx
frontend/src/components/BasketItemList/: BasketItemList.module.css  BasketItemList.tsx
frontend/src/components/Header/: Header.module.css  Header.tsx
frontend/src/components/Layout/: Layout.module.css  Layout.tsx
frontend/src/components/ProductCard/: ProductCard.module.css  ProductCard.tsx
frontend/src/components/ProductList/: ProductList.module.css  (+1 more)
orders/: pyproject.toml  settings.toml
orders/alembic/: env.py
orders/alembic/versions/: 0f9f652209a3_add_order_models.py
orders/src/: dependencies.py  main.py
orders/src/configs/: app.py
orders/src/models/: order.py  sql_enums.py
orders/src/repositories/: order.py
orders/src/schemas/: order_schema.py
orders/src/services/: http_client_service.py  order_service.py
products/: Dockerfile  pyproject.toml  settings.toml
products/alembic/: env.py
products/alembic/versions/: ab47d468acb4_add_product_model.py
products/src/: database.py  main.py
products/src/api/v1/: product_api.py
products/src/configs/: app.py
products/src/models/: base.py  product.py
products/src/repositories/: product.py
products/src/schemas/: product_schema.py
products/src/services/: product_service.py
(+10 files in other folders)
