[project]
name = "products"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dynaconf>=3.2.13",
    "fastapi[standard]>=0.135.3",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "ty>=0.0.28",
]
